Revamp the main build file
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/branches/CONNECTORS-912@1582281 13f79535-47bb-0310-9956-ffa450edef68